--- a/foundry.toml
+++ b/foundry.toml
@@ -6,4 +6,7 @@ optimizer = true
 optimizer_runs = 200
 via_ir = true
 
+[lint]
+exclude_lints = ["mixed-case-function", "mixed-case-variable", "screaming-snake-case-immutable"]
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
