--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,3 +38,5 @@ jobs:
         run: |
           forge test -vvv
         id: test
+        env:
+          MAINNET_RPC_URL: ${{ secrets.MAINNET_RPC_URL }}
